<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/current_language"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/english_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/english" />

    <Button
        android:id="@+id/chinese_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chinese" />
</LinearLayout>